# nana

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  Makefile  PLAN.md  README.md  RELEASE_BODY.md  TODO.md  benchmarks_workflow_test.go  go.mod  go.sum  nana-verify.json  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: _config.yml  agents.html  clawhip-event-contract.md  command-reference.html  getting-started.html  guidance-schema.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  migration-mainline-post-v0.4.4.md  openclaw-integration.de.md  openclaw-integration.es.md  openclaw-integration.fr.md  openclaw-integration.it.md  openclaw-integration.ja.md  openclaw-integration.ko.md  openclaw-integration.md  openclaw-integration.pt.md  openclaw-integration.ru.md  openclaw-integration.tr.md  openclaw-integration.vi.md  openclaw-integration.zh-TW.md  openclaw-integration.zh.md  prompt-guidance-contract.md  prompt-migration-changelog.md  qa-plan-0.4.2.md  quickstart.md  release-body-0.9.0.md  release-body-0.9.1.md  release-notes-0.11.12.md  release-notes-0.7.6.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.8.7.md  release-notes-0.8.8.md  (+9 more)
missions/: README.md
playground/: README.md
prompts/: analyst.md  api-reviewer.md  architect.md  backend-performance-scout.md  build-fixer.md  code-reviewer.md  critic-embedded.md  critic.md  executor.md  (+25 more)
(+678 files in other folders)
