[workspace]
members = [
  "crates/nana-explore",
  "crates/nana-mux",
  "crates/nana-runtime-core",
  "crates/nana-runtime",
  "crates/nana-sparkshell",
]
resolver = "2"

[workspace.package]

version = "0.11.12"

edition = "2021"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/nana"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
